<resources>
    <string name="app_name">Salão de Beleza</string>
    <string name="txtBoasvindas">Aplicativo Android</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="btnCadastrar">CADASTRAR</string>
    <string name="txtMsgFunc">Cadastrar Funcionário</string>
    <string name="txtCPFFunc"> CPF do Funcionário (ID):</string>
    <string name="txtSenha">Senha:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtFone">Telefone:</string>
    <string name="txtComissao">Comissão:</string>
    <string name="btn_CadFunc">CADASTRAR</string>
    <string name="btn_VoltarCad">VOLTAR</string>
    <string name="edt_CPFFunc"></string>
    <string name="edt_Login"></string>
    <string name="edt_Senha"></string>
    <string name="edt_Email"></string>
    <string name="edt_Fone"></string>
    <string name="edt_Comissao"></string>
    <string name="txt_TextoLOGIN">TELA LOGIN</string>
    <string name="txt_TextoLOGIN_usuario">Usuario:</string>
    <string name="txt_TextoLOGIN_SENHA">Senha:</string>
    <string name="edt_LOGIN_usuario"></string>
    <string name="edt_LOGIN_senha"></string>
    <string name="btn_LOGIN_voltar">VOLTAR</string>
    <string name="btn_LOGIN_entrar">LOGAR</string>
    <string name="txtCADASTRO_USU_msg">Cadastrar Usuário</string>
    <string name="txtCADASTRO_USU_cpf">CPF</string>
    <string name="txtCADASTRO_USU_nome">Nome</string>
    <string name="txtCADASTRO_USU_telefone">Telefone</string>
    <string name="txtCADASTRO_USU_email">Email</string>
    <string name="txtCADASTRO_USU_uf">UF</string>
    <string name="edtCADASTRO_USU_cpf"></string>
    <string name="edtCADASTRO_USU_nome"></string>
    <string name="edtCADASTRO_USU_telefone"></string>
    <string name="edtCADASTRO_USU_email"></string>
    <string name="edtCADASTRO_USU_uf"></string>
    <string name="btnCADASTRO_USU_cad">CADASTRAR</string>
    <string name="btnCADASTRO_USU_voltar">VOLTAR</string>
    <string name="txtBemVindo">Boas vindas, </string>
    <string name="txtPainelCOntrole">Painel de Controle</string>
    <string name="txtSincronizar">Atenção!! Não esqueça de sincronizar os dados do aplicativo antes de sair do Painel de Controle!!!</string>
    <string name="txtClientePAINEL">Cliente</string>
    <string name="txtAgendamentoPAINEL">Agendamento</string>
    <string name="txtOrdemPAINEL">Ordem de Serviço</string>
    <string name="txtServicoPAINEL">Serviço</string>
    <string name="btnPainelCliente">Cadastrar Cliente</string>
    <string name="btnPainelAgendamento">Cadastrar Agendamento</string>
    <string name="btnPainelOrdem">Cadastrar Ordem de Serviço</string>
    <string name="btnPainelListarCLiente">Listar Clientes</string>
    <string name="btnPainelListarAgendamentos">Listar Agendamentos</string>
    <string name="btnPainelListarOrdensServicos">Listar Ordens de Serviço</string>
    <string name="btnPainelEditarCliente">Editar Cliente</string>
    <string name="btnPainelExcluirCliente">Excluir Cliente</string>
    <string name="btnPainelEditarAgendamento">Editar Agendamento</string>
    <string name="btnPainelExcluirAgendamento">Excluir Agendamento</string>
    <string name="btnPainelExcluirOrdem">Excluir Ordem de Serviço</string>
    <string name="btnPainelEditarOrdem">Editar Ordem de Serviço</string>
    <string name="btnPainelServicoCadastrar">Cadastrar Serviço</string>
    <string name="btnPainelServicoListar">Listar Serviços</string>
    <string name="btnPainelServicoEditar">Editar Serviço</string>
    <string name="btnPainelServicoExcluir">Excluir Serviço</string>
    <string name="btnSincronizar">Sincronizar</string>
    <string name="btnPainelVoltar">Sair</string>
    <string name="btnVoltar">Voltar</string>
    <string name="lista_clientes">Lista Clientes</string>
    <string name="TextViewTelaEditUsuario">Editar Cliente</string>
    <string name="TextViewDigiteCPF">Digite o CPF do cliente que deseja alterar informações</string>
    <string name="EdtCPFprocurar"></string>
    <string name="btnProcurarCPFCliente">Procurar</string>
    <string name="btnVoltarInput">Voltar</string>
    <string name="TextViewTelaEditUsuarioOut">Editar Cliente</string>
    <string name="TextViewCPF_out">CPF</string>
    <string name="TextViewNome_out">Nome</string>
    <string name="TextViewTelefone_out">Telefone</string>
    <string name="TextViewEmail_out">Email</string>
    <string name="TextViewUF_out">UF</string>
    <string name="EditCPF_out"></string>
    <string name="EditNome_out"></string>
    <string name="EditTelefone_out"></string>
    <string name="EditEmail_out"></string>
    <string name="EditUF_out"></string>
    <string name="ButtonAlterarOut">Alterar</string>
    <string name="ButtonVoltarOut">Voltar</string>
    <string name="TextViewDeletarUsuarioMESSAGE">Excluir Cliente</string>
    <string name="TxtDELETE_CPF">CPF</string>
    <string name="edtDELETE_inputCPF"></string>
    <string name="btnDELETAR_excluir">Excluir</string>
    <string name="btnDELETAR_voltar">Voltar</string>
    <string name="txtServicoMESSAGECad">Cadastrar Serviço</string>
    <string name="txtServicoNomeCad">Nome</string>
    <string name="txtServicoPrecoCustoCad">Preço de Custo</string>
    <string name="txtServicoPrecoVendaCad">Preço de venda</string>
    <string name="txtServicoDescricaoCad">Descrição do Serviço</string>
    <string name="edtNomeServicoCad"></string>
    <string name="edtPrecoCustoServicoCad"></string>
    <string name="edtPrecoVendaServicoCad"></string>
    <string name="edtDescricaoCad"></string>
    <string name="btnServicoCadastrarServicoCad">Cadastrar Serviço</string>
    <string name="btnServicoVoltarServicoCad">Voltar</string>
    <string name="txtServicoListarNAME">Listar Serviços</string>
    <string name="btnServicoVoltarListar">Voltar</string>
    <string name="listView_ServicoLISTAR"></string>
    <string name="ServicoMESSAGE_input">Editar Serviço</string>
    <string name="Servico_id_input_TelaEDITservico">Digite o ID referente ao serviço que deseja editar, caso tenha dúvida, retornar a tela Painel de Controle e clicar listar Serviços para ter acesso ao ID.</string>
    <string name="edtServio_id_input"></string>
    <string name="btnServico_Procurar_input">Procurar Serviço</string>
    <string name="btnServico_voltar_input">Voltar</string>
    <string name="ServicoMESSAGE_output">Editar Serviço</string>
    <string name="txtServicoIdOutput">Id</string>
    <string name="txtServicoNomeOutput">Nome</string>
    <string name="txtServicoDescricaoOutput">Descrição</string>
    <string name="txtServicoPrecoCustoOutput">Preço de Custo</string>
    <string name="txtServicoPrecoVendaOutput">Preço de Venda</string>
    <string name="edtServicoIdOutput"></string>
    <string name="edtServicoNomeOutput"></string>
    <string name="edtServicoDescricaoOutput"></string>
    <string name="edtServicoPrecoCustoOutput"></string>
    <string name="edtServicoPrecoVendaOutput"></string>
    <string name="btnServicoAlterarOutput">Alterar Serviço</string>
    <string name="btnServicoVoltarOutput">Voltar</string>
    <string name="txtServicoExcluir_MESSAGE">Excluir Serviço</string>
    <string name="txtServicoExcluir_id">Id</string>
    <string name="edtServicoExcluir_id"></string>
    <string name="btnServicoExcluir_deleted">Excluir</string>
    <string name="btnServicoExcluir_voltar">Voltar</string>
    <string name="txtAgendamentoMESSAGEcad">Cadastrar Agendamento</string>
    <string name="txtAgendamentoDateCad">Data</string>
    <string name="txtAgendamentoHoraCad">Hora</string>
    <string name="txtAgendamentoStatus">Status</string>
    <string name="txtAgendamentoObsCad">Observação</string>
    <string name="txtAgendamentoClienteCad_cpf">Cliente (CPF_fk)</string>
    <string name="txtAgendamentoFuncionarioResponsavelCad_cpf">Funcionário (CPF_fk)</string>
    <string name="txtAgendamentoServico_cad_id">Serviço (Id_fk)</string>
    <string name="edtAgendamentoDateCad"></string>
    <string name="edtAgendamentoHoraCad"></string>
    <string name="edtAgendamentoStatus"></string>
    <string name="edtAgendamentoObsCad"></string>
    <string name="edtAgendamentoClienteCad_cpf"></string>
    <string name="edtAgendamentoFuncionarioResponsavelCad_cpf"></string>
    <string name="edtAgendamentoServico_cad_id"></string>
    <string name="btnAgendamentoCad_cadastrar">Cadastrar Agendamento</string>
    <string name="btnAgendamentoCad_voltar">Voltar</string>
    <string name="txtOrdemServico_Cadastrar_MESSAGE">Cadastrar Ordem de Serviço</string>
    <string name="txtOrdemServico_Cadastrar_DATA_INICIO">Data Inicio</string>
    <string name="txtOrdemServico_Cadastrar_DATA_FIM">Data Fim</string>
    <string name="txtOrdemServico_Cadastrar_HORA_INICIO">Hora Inicio</string>
    <string name="txtOrdemServico_Cadastrar_HORA_FIM">Hora Fim</string>
    <string name="txtOrdemServico_Cadastrar_STATUS">Status</string>
    <string name="txtOrdemServico_Cadastrar_VALOR">Valor</string>
    <string name="txtOrdemServico_Cadastrar_AGENDAMENTO_ID">Agendamento (Id_FK)</string>
    <string name="txtOrdemServico_Cadastrar_SERVICO_ID">Serviço (Id_FK)</string>
    <string name="txtOrdemServico_Cadastrar_FUNCIONARIO_CPF_os">Funcionario responsavel pela OS (CPF_FK)</string>
    <string name="txtOrdemServico_Cadastrar_FUNCIONARIO_CPF_servico">Funcionario responsavel pelo Serviço (CPF_FK)</string>
    <string name="edtOrdemServico_Cadastrar_DATA_INICIO"></string>
    <string name="edtOrdemServico_Cadastrar_DATA_FIM"></string>
    <string name="edtOrdemServico_Cadastrar_HORA_INICIO"></string>
    <string name="edtOrdemServico_Cadastrar_HORA_FIM"></string>
    <string name="edtOrdemServico_Cadastrar_STATUS"></string>
    <string name="edtOrdemServico_Cadastrar_VALOR"></string>
    <string name="edtOrdemServico_Cadastrar_AGENDAMENTO_ID"></string>
    <string name="edtOrdemServico_Cadastrar_SERVICO_ID"></string>
    <string name="edtOrdemServico_Cadastrar_FUNCIONARIO_CPF_os"></string>
    <string name="edtOrdemServico_Cadastrar_FUNCIONARIO_CPF_servico"></string>
    <string name="btnOrdemServico_Cadastrar_CADASTRAR">Cadastrar Ordem de Serviço</string>
    <string name="btnOrdemServico_Cadastrar_VOLTAR">Voltar</string>
    <string name="txtOrdemServicoOUTPUT_MESSAGE">Editar Ordem de Serviço</string>
    <string name="txtOrdemServivoOUTPUT_id">Id</string>
    <string name="txtOrdemServivoOUTPUT_dataInicio">Data Inicio</string>
    <string name="txtOrdemServivoOUTPUT_dataFim">Data Fim</string>
    <string name="txtOrdemServivoOUTPUT_horaInicio">Hora Inicio</string>
    <string name="txtOrdemServivoOUTPUT_horaFim">Hora Fim</string>
    <string name="txtOrdemServivoOUTPUT_status">Status</string>
    <string name="txtOrdemServivoOUTPUT_valor">Valor</string>
    <string name="txtOrdemServivoOUTPUT_agendamento_id">Agendamento (Id_FK)</string>
    <string name="txtOrdemServivoOUTPUT_servico_id">Serviço (Id_FK)</string>
    <string name="txtOrdemServivoOUTPUT_funcionario_cpf_responsavelOS">Funcionario responsavel pela OS (CPF_FK)</string>
    <string name="txtOrdemServivoOUTPUT_funcionario_cpf_responsavelSERVICO">Funcionario responsavel pelo Serviço (CPF_FK)</string>
    <string name="edtOrdemServivoOUTPUT_id"></string>
    <string name="edtOrdemServivoOUTPUT_dataInicio"></string>
    <string name="edtOrdemServivoOUTPUT_dataFim"></string>
    <string name="edtOrdemServivoOUTPUT_horaInicio"></string>
    <string name="edtOrdemServivoOUTPUT_horaFim"></string>
    <string name="edtOrdemServivoOUTPUT_status"></string>
    <string name="edtOrdemServivoOUTPUT_valor"></string>
    <string name="edtOrdemServivoOUTPUT_agendamento_id"></string>
    <string name="edtOrdemServivoOUTPUT_servico_id"></string>
    <string name="edtOrdemServivoOUTPUT_funcionario_cpf_responsavelOS"></string>
    <string name="edtOrdemServivoOUTPUT_funcionario_cpf_responsavelSERVICO"></string>
    <string name="btnOrdemServicoOUTPUT_ALTERAR">Alterar</string>
    <string name="btnOrdemServicoOUTPUT_VOLTAR">Voltar</string>
</resources>