<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:padding="15px"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Telas.PainelControle.OrdemServicoCadastrar">

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_MESSAGE"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_MESSAGE" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_DATA_INICIO"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_DATA_INICIO" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_DATA_INICIO"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_DATA_INICIO" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_DATA_FIM"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_DATA_FIM" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_DATA_FIM"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_DATA_FIM" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_HORA_INICIO"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_HORA_INICIO" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_HORA_INICIO"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_HORA_INICIO" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_HORA_FIM"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_HORA_FIM" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_HORA_FIM"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_HORA_FIM" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_STATUS"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_STATUS" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_STATUS"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_STATUS" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_VALOR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_VALOR" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_VALOR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_VALOR" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_AGENDAMENTO_ID"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_AGENDAMENTO_ID" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_AGENDAMENTO_ID"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_AGENDAMENTO_ID" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_SERVICO_ID"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_SERVICO_ID" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_SERVICO_ID"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_SERVICO_ID" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_FUNCIONARIO_CPF_os"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_FUNCIONARIO_CPF_os" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_FUNCIONARIO_CPF_os"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_FUNCIONARIO_CPF_os" />

    <TextView
        android:id="@+id/txtOrdemServico_Cadastrar_FUNCIONARIO_CPF_servico"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txtOrdemServico_Cadastrar_FUNCIONARIO_CPF_servico" />

    <EditText
        android:id="@+id/edtOrdemServico_Cadastrar_FUNCIONARIO_CPF_servico"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtOrdemServico_Cadastrar_FUNCIONARIO_CPF_servico" />

    <Button
        android:id="@+id/btnOrdemServico_Cadastrar_CADASTRAR"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        app:backgroundTint="#FF5722"
        android:text="@string/btnOrdemServico_Cadastrar_CADASTRAR" />

    <Button
        android:id="@+id/btnOrdemServico_Cadastrar_VOLTAR"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/btnOrdemServico_Cadastrar_VOLTAR" />

</LinearLayout>
</ScrollView>